# ec-helm-charts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ioc-instance-1.0.0.tgz  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _helm.yml  _precommit.yml  ci.yml  helm_deploy.yml  schema_release.yml
Charts/argocd-apps/: .schema.config.yaml  Chart.yaml  examples.values.yaml  values.schema.json  values.yaml
Charts/argocd-apps/templates/: _apps.tpl
Charts/beamline-chart/: Chart.yaml  values.yaml
Charts/beamline-chart/templates/: _configmap.yaml  _deployment.yaml  _ioc-volume.yaml  _ioc.yaml
Charts/carepeater/: .schema.config.yaml  Chart.yaml  extra.values.yaml  values.schema.json  values.yaml
Charts/carepeater/templates/: _helpers.tpl  daemonset.yaml
Charts/epics-opis/: Chart.yaml  values.yaml
Charts/epics-opis/config/: nginx.conf
Charts/epics-opis/templates/: configmap.yaml  deploy.yaml
Charts/epics-pvcs/: .schema.config.yaml  Chart.yaml  epics-pvcs.schema.json  example.values.yaml  values.yaml
Charts/epics-pvcs/templates/: deploy.yaml  pod.yaml
Charts/ioc-instance/: .schema.config.yaml  Chart.yaml  example.values.yaml  ioc-instance.schema.json  values.schema.json  values.yaml
Charts/nfsv2-tftp/: Chart.yaml  values.yaml
Charts/opis/: Chart.yaml
Charts/shared/: Chart.yaml  values.yaml
Charts/shared/templates/: deploy.yaml
Schemas/: argocd-apps.schema.json  ioc-instance.json  ioc-instance.schema.json
schemas/: argocd-apps.schema.json  carepeater.schema.json  ioc-instance.schema.json
(+13 files in other folders)
